HTM-1710: Apply OpenRewrite recipe for Java 21