@@ -112,8 +112,8 @@ public class FrontControllerResolver implements ResourceResolver, InitializingBe
       localeResolver.setSupportedLocales(
           supportedLanguages.stream().map(Locale::new).toList());
       Locale defaultLocale = supportedLanguages.contains(defaultLanguage)
-          ? new Locale(defaultLanguage)
-          : localeResolver.getSupportedLocales().get(0);
+          ? Locale.of(defaultLanguage)
+          : localeResolver.getSupportedLocales().getFirst();
       localeResolver.setDefaultLocale(defaultLocale);
       logger.info("Default language set to: {}", defaultLocale.toLanguageTag());
     }
